--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,27 +1,21 @@
-name: Java CI
+name: CI Pipeline
 
 on:
   push:
-    branches: [master, main]
-  pull_request:
-    branches: [master, main]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 15
-        uses: actions/setup-java@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
         with:
-          java-version: '15'
-          distribution: 'adopt'
-      - name: Lint Code Base
-        uses:  github/super-linter/slim@v4
-        env:
-          DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JAVA_FILE_NAME: checkstyle.xml
-      - name: Test with Maven
-        run: mvn --batch-mode --update-snapshots package
+          java-version: '11'
+
+      - name: Build with Maven
+        run: mvn clean install
